--- a/software.html
+++ b/software.html
@@ -95,7 +95,7 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seequent.workable.com/j/FF7D915E62'>Seequent - Jobs: Software Developer (2 roles) - Apply online</a></h5> 
+<h5><a href='https://seequent.workable.com/j/FF7D915E62'>Seequent - Jobs: Software Developer (2 roles) - Apply online</a></h5> 
 <p><span class="badge badge-light">New Zealand</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -139,7 +139,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXmaVfw8&k=Job&j=ovyDafwA&__jvst=Employee+Referral+&__jvsd=sB6OMgw2&__jvsc=Twitter&bid=neyXVLwU'>Northcentral University Careers - Jr. Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXmaVfw8&k=Job&j=ovyDafwA&__jvst=Employee+Referral+&__jvsd=sB6OMgw2&__jvsc=Twitter&bid=neyXVLwU'>Northcentral University Careers - Jr. Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -327,6 +327,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/docsis-software-engineer-fixed-networks-30429'>DOCSIS Software Engineer - Fixed Networks - Nokia Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>3 days ago ... Design, develop and maintain software covering data-path, provisioning, 
+operational feedback and diagnostics functionality. Help bring up new systems,?...</p>
+<hr/>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lilium/jobs/1754713'>Job Application for Embedded Software Engineer - Platforms Software at Lilium</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -358,7 +363,7 @@ or?...</p>
 <p>3 days ago ... Looka (formerly Logojoy) is exploring the intersection of machine learning and 
 design, providing users with a platform to make beautiful designs for any project.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/jobs/1083862'>Staff Software Engineer, Applied Machine Learning</a></h5> 
+<h5><a href='https://smartnews.workable.com/jobs/1083862'>Staff Software Engineer, Applied Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Staff Software Engineer, Applied Machine Learning at 
 SmartNews, Inc.</p>
@@ -406,7 +411,7 @@ Diego, CA or Santa Clara, CA. ServiceNow makes the world of work, work better
 <p><span class="badge badge-light">Canada Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/pagerduty/f8d63db8-d916-4c95-9f85-b38e12f6ff03'>PagerDuty - Senior Software Engineer - Pipeline</a></h5> 
+<h5><a href='https://jobs.lever.co/pagerduty/f8d63db8-d916-4c95-9f85-b38e12f6ff03'>PagerDuty - Senior Software Engineer - Pipeline</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -452,10 +457,6 @@ data and machine learning to build the world's fastest-growing travel app -- one
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... We are leveraging the power that comes from combining massive amounts of 
 data and machine learning to build the world's fastest-growing travel app -- one?...</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/apttus/job/oYRI9fwq'>Apttus Careers - Software Engineer, Cloud Platform</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
 <hr/>
 
 
