--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -292,11 +292,11 @@ details?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/accentcare/job/oRptafwD'>AccentCare, Inc.? Careers - Speech Language Pathologist SLP PRN Marble Falls TX</a></h5> 
+<h5><a href='http://jobs.jobvite.com/accentcare/job/oRptafwD'>AccentCare, Inc.? Careers - Speech Language Pathologist SLP PRN Marble Falls TX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/NTGGroups/743999691161104-speech-language-pathologist'>NTG Groups Speech Language Pathologist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/NTGGroups/743999691161104-speech-language-pathologist'>NTG Groups Speech Language Pathologist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
