Angels of Care Pediatric Home Health Careers - Speech Language Pathologist. ChildServe Careers - Speech Language Pathologist - Ames. OnPointe at Home - Jobs: Speech Therapist (SLP) - Los Alamos .... Speech-Language Pathologist | Physical Rehabilitation Network. Speech Therapist SLP-PRN-Home Health. Aspire Medical Staffing Pediatric CFY/Speech Language Pathologist-Central and North Austin | SmartRecruiters. Speech Pathologist (Home Health) - Adventist Health Careers. Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care. Harley Therapy Speech and Language Therapist | SmartRecruiters. AccentCare, Inc.® Careers - Speech Language Pathologist SLP San Antonio TX. Kingman Regional Medical Center Careers - Speech Language Pathologist -Therapy Services - Kingman, Arizona - Per Diem. Speech Language Pathologist - MD Anderson Cancer Center Careers. Speech and Language Pathologist - Shrub Oak International School - Career Page. Job Application for Speech Language Pathologist (SLP) Home Health at BAYADA Home Health Care. Job Application for Pediatric Speech Language Pathologist (SLP) at BAYADA Home Health Care. Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care. Job Application for Speech Language Pathologist, SLP - Home Health at BAYADA Home Health Care. Job Application for Speech Therapist - Home Health at BAYADA Home Health Care. Job Application for Speech Language Pathologist (SLP) Full- Time at BAYADA Home Health Care. Job Application for Speech Language Pathologist (SLP), Senior Living at BAYADA Home Health Care. Job Application for Speech Language Pathologist - Home Health at BAYADA Home Health Care. Job Application for Speech Therapist - Home Health at BAYADA Home Health Care. Job Application for Speech Language Pathologist (SLP) - Home Health Care at BAYADA Home Health Care. Theracare INC Speech Language Pathologist - PRN | SmartRecruiters. Theracare INC Speech Language Pathologist - Sc

--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -50,6 +50,12 @@
 <p><span class="badge badge-light">Austin, TXTyler, TX</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
+<h5><a href='https://jobs.jobvite.com/childserve/job/ottwafwm'>ChildServe Careers - Speech Language Pathologist - Ames</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 14, 2019 ... In the role of Speech Language Pathologist you will provide comprehensive, 
+family-centered speech-language pathology services to children ages birth 
+through?...</p>
+<hr/>
 <h5><a href='https://www.workable.com/j/43E3272629'>OnPointe at Home - Jobs: Speech Therapist (SLP) - Los Alamos ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... ... Maintains records and reports in accordance with the policies of Advantage 
@@ -89,7 +95,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://mdanderson.referrals.selectminds.com/jobs/speech-language-pathologist-21235'>Speech Language Pathologist - MD Anderson Cancer Center Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mdanderson.referrals.selectminds.com/jobs/speech-language-pathologist-21235'>Speech Language Pathologist - MD Anderson Cancer Center Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -190,7 +196,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/owj63fwI'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Therapist Assistant - SLPA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/owj63fwI'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Therapist Assistant - SLPA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -280,11 +286,11 @@ details?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4349809002'>Job Application for ST, Speech Therapist, Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4349809002'>Job Application for ST, Speech Therapist, Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4349820002'>Job Application for ST, Speech Therapist, Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4349820002'>Job Application for ST, Speech Therapist, Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Salem</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -429,7 +435,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<h5><a href='http://phoebeministries.applytojob.com/apply/epwQTJnA6u/Physical-Occupational-And-Speech-Therapist-Per-Diem-Allentown'>Physical. Occupational, and Speech Therapist - Per Diem - Allentown - Phoebe Ministries - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://phoebeministries.applytojob.com/apply/epwQTJnA6u/Physical-Occupational-And-Speech-Therapist-Per-Diem-Allentown'>Physical. Occupational, and Speech Therapist - Per Diem - Allentown - Phoebe Ministries - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
@@ -456,10 +462,6 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <h5><a href='https://orlandohealth.csod.com/ats/careersite/JobDetails.aspx?id=8378&site=1&source=12'>Speech Language Pathologist (Weekend Option) (Pool) - OHRI (Days) - req8378</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-06-26</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/valleyhealth/job/oDUj9fwJ'>Valley Health Careers - Speech Pathologist I</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-06-26</p>
 <hr/>
 
 
